@@ -2,7 +2,7 @@
 '\" Generated from file 'cat\&.man' by tcllib/doctools with format 'nroff'
 '\" Copyright (c) 2011 Andreas Kupries <andreas_kupries@users\&.sourceforge\&.net>
 '\"
-.TH "tcl::chan::cat" n 1 tcllib "Reflected/virtual channel support"
+.TH "tcl::chan::cat" n 1\&.0\&.3 tcllib "Reflected/virtual channel support"
 .\" The -*- nroff -*- definitions below are for supplemental macros used
 .\" in Tcl/Tk manual entries.
 .\"
@@ -280,7 +280,7 @@ package require \fBTclOO \fR
 .sp
 package require \fBtcl::chan::core  ?1?\fR
 .sp
-package require \fBtcl::chan::cat  ?1?\fR
+package require \fBtcl::chan::cat  ?1\&.0\&.3?\fR
 .sp
 \fB::tcl::chan::cat\fR \fIchan\fR\&.\&.\&.
 .sp
