@@ -107,7 +107,7 @@
 &#124; <a href="../../../../toc2.html">Applications</a>
  ] <hr>
 <div class="doctools">
-<h1 class="doctools_title">tcl::chan::cat(n) 1 tcllib &quot;Reflected/virtual channel support&quot;</h1>
+<h1 class="doctools_title">tcl::chan::cat(n) 1.0.3 tcllib &quot;Reflected/virtual channel support&quot;</h1>
 <div id="name" class="doctools_section"><h2><a name="name">Name</a></h2>
 <p>tcl::chan::cat - Concatenation channel</p>
 </div>
@@ -129,7 +129,7 @@
 <li>package require <b class="pkgname">Tcl 8.5</b></li>
 <li>package require <b class="pkgname">TclOO</b></li>
 <li>package require <b class="pkgname">tcl::chan::core <span class="opt">?1?</span></b></li>
-<li>package require <b class="pkgname">tcl::chan::cat <span class="opt">?1?</span></b></li>
+<li>package require <b class="pkgname">tcl::chan::cat <span class="opt">?1.0.3?</span></b></li>
 </ul>
 <ul class="doctools_syntax">
 <li><a href="#1"><b class="cmd">::tcl::chan::cat</b> <i class="arg">chan</i>...</a></li>
